@@ -1,5 +1,6 @@
 0.5:
   CGI-through-proxy support (read README.proxy)
+  SIGHUP will close server sockets but continue serving open requests
 
 0.4:
   add primitive FTP support (default: enabled; disable with -F!)
